--- a/wercker.yml
+++ b/wercker.yml
@@ -22,17 +22,17 @@ deploy-to-oke:
     - script:
         name: "Visualise Kubernetes config"
         code: cat kubernetes-deployment.yml
-    #
-    #- kubectl:
-    #    name: delete namespace
-    #    server: $KUBERNETES_MASTER
-    #    token: $KUBERNETES_TOKEN
-    #    insecure-skip-tls-verify: true
-    #    command: delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true
-        
-    #- script:
-    #    name: wait to delete namespace
-    #    code: sleep 60
+    
+    - kubectl:
+        name: delete namespace
+        server: $KUBERNETES_MASTER
+        token: $KUBERNETES_TOKEN
+        insecure-skip-tls-verify: true
+        command: delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true
+       
+    - script:
+        name: wait to delete namespace
+        code: sleep 60
         
     - kubectl:
         name: create namespace    
@@ -40,7 +40,7 @@ deploy-to-oke:
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
         command: create namespace $WERCKER_APPLICATION_OWNER_NAME
- 
+        
      - script:
         name: wait to create namespace
         code: sleep 10
