--- a/wercker.yml
+++ b/wercker.yml
@@ -1,119 +1,116 @@
-box: node:6.10
-build:
-  steps:
-    - script:
-        name: A step that executes `npm install` command
-        code: npm install  
-
-push-to-releases:
-  steps:
-    # Push to public docker repo Container Registry (CR)
-    - internal/docker-push:
-        tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
-        cmd: node /pipeline/source/app.js
-
-deploy-to-oke:
-  box:
-        id: alpine
-        cmd: /bin/sh
-  steps:
+box: "node:6.10"
+build: 
+  steps: 
+    - 
+      script: 
+        code: "npm install"
+        name: "A step that executes `npm install` command"
+deploy-to-oke: 
+  box: 
+    cmd: /bin/sh
+    id: alpine
+  steps: 
     - bash-template
-    
-    - script:
+    - 
+      script: 
+        code: "cat kubernetes-deployment.yml"
         name: "Visualise Kubernetes config"
-        code: cat kubernetes-deployment.yml
-    
-    - kubectl:
-        name: delete namespace
+    - 
+      kubectl: 
+        command: "delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true"
+        insecure-skip-tls-verify: true
+        name: "delete namespace"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
+    - 
+      script: 
+        code: "sleep 60"
+        name: "wait to delete namespace"
+    - 
+      kubectl: 
+        command: "apply -f $WERCKER_ROOT/kubernetes-namespace.yml"
         insecure-skip-tls-verify: true
-        command: delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true
-       
-    - script:
-        name: wait to delete namespace
-        code: sleep 60
-        
-    - kubectl:
-        name: create namespace    
+        name: "create namespace"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
+    - 
+      script: 
+        code: "sleep 10"
+        name: "wait to create namespace"
+    - 
+      kubectl: 
+        command: "create secret docker-registry wrelease --docker-server=wcr.io --docker-username=$WERCKER_APPLICATION_OWNER_NAME --docker-password=$KUBERNETES_TOKEN --docker-email=${WERCKER_APPLICATION_OWNER_NAME}@mail.com --namespace=$WERCKER_APPLICATION_OWNER_NAME; echo 'secret step'"
         insecure-skip-tls-verify: true
-        command: create namespace $WERCKER_APPLICATION_OWNER_NAME
-        
-     - script:
-        name: wait to create namespace
-        code: sleep 10
- 
-    - kubectl:
-        name: create OCR secret
+        name: "create OCR secret"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
+    - 
+      kubectl: 
+        command: "apply -f $WERCKER_ROOT/kubernetes-deployment.yml --namespace=$WERCKER_APPLICATION_OWNER_NAME"
         insecure-skip-tls-verify: true
-        command: create secret docker-registry wrelease --docker-server=wcr.io --docker-username=$WERCKER_APPLICATION_OWNER_NAME --docker-password=$KUBERNETES_TOKEN --docker-email=${WERCKER_APPLICATION_OWNER_NAME}@mail.com --namespace=$WERCKER_APPLICATION_OWNER_NAME
-    
-    - kubectl:
-        name: create deplyoment
+        name: "create deplyoment"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
-        insecure-skip-tls-verify: true
-        command: create -f $WERCKER_ROOT/kubernetes-deployment.yml --namespace=$WERCKER_APPLICATION_OWNER_NAME
-
-    - script:
+    - 
+      script: 
+        code: "cat ingress.yml"
         name: "Visualise Ingress config"
-        code: cat ingress.yml
-
-    - kubectl:
-        name: create Ingress configuration
+    - 
+      kubectl: 
+        command: "apply -f $WERCKER_ROOT/ingress.yml --namespace=$WERCKER_APPLICATION_OWNER_NAME"
+        insecure-skip-tls-verify: true
+        name: "create Ingress configuration"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
+    - 
+      kubectl: 
+        command: "get svc -o jsonpath='{.items[*].status.loadBalancer.ingress[*].ip}' --all-namespaces"
         insecure-skip-tls-verify: true
-        command: create -f $WERCKER_ROOT/ingress.yml --namespace=$WERCKER_APPLICATION_OWNER_NAME
-        
-    - kubectl:
-        name: get LoadBalancer public IP address
+        name: "get LoadBalancer public IP address"
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
-        insecure-skip-tls-verify: true
-        command: get svc -o jsonpath='{.items[*].status.loadBalancer.ingress[*].ip}' --all-namespaces
-
-rest-functional-test:
-  steps:
-    - script:
-        name: Test Microservice
+push-to-releases: 
+  steps: 
+    - 
+      internal/docker-push: 
+        cmd: "node /pipeline/source/app.js"
+        tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+rest-functional-test: 
+  steps: 
+    - 
+      script: 
         code: |
-              mkdir -p "/pipeline"
-              node $WERCKER_ROOT/app.js &
-              sleep 2
-              CREDITSCORE_URL=http://localhost:3000/creditscore
-              echo 'Microservice URL=' $CREDITSCORE_URL
-              if curl -X POST -H "Content-Type: application/json" -X POST -d '{"firstname":"John","lastname":"Doe","dateofbirth":"01/01/2015","ssn":"111223333"}' $CREDITSCORE_URL | grep "firstname"
-              then
-                  # if the keyword is in the conent
-                  echo "Test passed"
-              else
-                  echo "Test failed"
-                  exit -1
-              fi
-
-ui-functional-test:
-  box:
-    id: peternagy/chrome-protractor-headless-test:node9.2-chrome62
-  steps:
-    - script:
-        name: Run UI test
-        code: | 
-              nohup node $WERCKER_ROOT/app.js > creditscoreapp.log &
-              echo 'Application URL to test: http://localhost:3000/creditscore'
-              protractor $WERCKER_ROOT/test/protractor.conf.js
-              exit_status=$?
-              echo 'CreditScore app server log :::START'
-              cat creditscoreapp.log
-              echo 'CreditScore app server log :::END'
-              if [ $exit_status -eq 0 ]; then
-                echo "UI test passed"
-              else
-                echo "UI test failed"
+            mkdir -p "/pipeline"
+            node $WERCKER_ROOT/app.js &
+            sleep 2
+            CREDITSCORE_URL=http://localhost:3000/creditscore
+            echo 'Microservice URL=' $CREDITSCORE_URL
+            if curl -X POST -H "Content-Type: application/json" -X POST -d '{"firstname":"John","lastname":"Doe","dateofbirth":"01/01/2015","ssn":"111223333"}' $CREDITSCORE_URL | grep "firstname"
+            then
+                # if the keyword is in the conent
+                echo "Test passed"
+            else
+                echo "Test failed"
                 exit -1
-              fi                
-              
+            fi
+        name: "Test Microservice"
+ui-functional-test: 
+  box: 
+    id: "peternagy/chrome-protractor-headless-test:node9.2-chrome62"
+  steps: 
+    - 
+      script: 
+        code: "nohup node $WERCKER_ROOT/app.js > creditscoreapp.log &\n\
+            echo 'Application URL to test: http://localhost:3000/creditscore'\n\
+            protractor $WERCKER_ROOT/test/protractor.conf.js\n\
+            exit_status=$?\n\
+            echo 'CreditScore app server log :::START'\n\
+            cat creditscoreapp.log\n\
+            echo 'CreditScore app server log :::END'\n\
+            if [ $exit_status -eq 0 ]; then\n\
+            \x20 echo \"UI test passed\"\n\
+            else\n\
+            \x20 echo \"UI test failed\"\n\
+            \x20 exit -1\n\
+            fi                "
+        name: "Run UI test"
