--- a/wercker.yml
+++ b/wercker.yml
@@ -12,16 +12,16 @@ deploy-to-oke:
   steps: 
     - bash-template
     - 
-      script: 
-        code: "cat kubernetes-deployment.yml"
-        name: "Visualise Kubernetes config"
+      #script: 
+      #  code: "cat kubernetes-deployment.yml"
+      #  name: "Visualise Kubernetes config"
     - 
-      kubectl: 
-        command: "delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true"
-        insecure-skip-tls-verify: true
-        name: "delete namespace"
-        server: $KUBERNETES_MASTER
-        token: $KUBERNETES_TOKEN
+      #kubectl: 
+      #  command: "delete namespace $WERCKER_APPLICATION_OWNER_NAME --ignore-not-found=true"
+      #  insecure-skip-tls-verify: true
+      #  name: "delete namespace"
+      #  server: $KUBERNETES_MASTER
+      #  token: $KUBERNETES_TOKEN
     - 
       script: 
         code: "sleep 60"
